SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>