SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/A_B_Tests_Concurrent__c.field-meta.xml
<CustomField>
    <fullName>A_B_Tests_Concurrent__c</fullName>
    <description>The number of concurrent A/B test impressions</description>
    <inlineHelpText>Use -999 for unlimited</inlineHelpText>
    <label>Experimentation - # of Events per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>