SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/A_Customer_confirmed_interest__c.field-meta.xml
<CustomField>
    <fullName>A_Customer_confirmed_interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A. Customer confirmed interest</label>
    <type>Checkbox</type>
</CustomField>