SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AB_Testing__c.field-meta.xml
<CustomField>
    <fullName>AB_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the use case include AB testing?</description>
    <inlineHelpText>Does the use case include AB testing?</inlineHelpText>
    <label>Experimentation included in contract</label>
    <type>Checkbox</type>
</CustomField>