SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Account_ARR_Check__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR_Check__c</fullName>
    <formula>ARR_up_for_Renewal__c -  Account.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ARR Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>