SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM__c</fullName>
    <formula>Account.Customer_Success_Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CSM</label>
    <type>Text</type>
</CustomField>