SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <description>Hidden field showing the Account&apos;s plan as of today</description>
    <formula>Account.Plan__c</formula>
    <inlineHelpText>Hidden field showing the Account&apos;s plan as of today</inlineHelpText>
    <label>Account Plan</label>
    <type>Text</type>
</CustomField>