SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Account_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_Rating__c</fullName>
    <description>The Account&apos;s rating</description>
    <formula>Text(Account.Rating)</formula>
    <inlineHelpText>The Account&apos;s rating</inlineHelpText>
    <label>Account Rating</label>
    <type>Text</type>
</CustomField>