SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Account_Sales_Touched__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Touched__c</fullName>
    <description>There is at least 1 sales-touched Opportunity against the account</description>
    <formula>Account.Sales_touched__c &gt; 0</formula>
    <inlineHelpText>There is at least 1 sales-touched Opportunity against the account</inlineHelpText>
    <label>Account Sales-Touched</label>
    <type>Checkbox</type>
</CustomField>