SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Actual_service_end_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_service_end_date__c</fullName>
    <description>Automated through rollup helper</description>
    <inlineHelpText>Pulled from the max End Date on Product table</inlineHelpText>
    <label>Effective service end date</label>
    <type>Date</type>
</CustomField>