SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Additional_features__c.field-meta.xml
<CustomField>
    <fullName>Additional_features__c</fullName>
    <description>Please write any additional features for this plan (separate by a comma): Webhooks, A/B testing &amp; analytics, performance monitoring, real-time event stream, premium support, on-premise / private deploy</description>
    <inlineHelpText>Please write any additional features for this plan (separate by a comma): Webhooks, A/B testing &amp; analytics, performance monitoring, real-time event stream, premium support, on-premise / private deploy</inlineHelpText>
    <label>Additional Features</label>
    <type>TextArea</type>
</CustomField>