SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Additional_Terms_3rd_Bullet__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms_3rd_Bullet__c</fullName>
    <description>populated by CPQ</description>
    <label>Additional Terms 3rd Bullet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>