SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Additional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Additional_Terms__c</fullName>
    <description>Any value in this field will be overwritten with the value in the Quote.</description>
    <label>Additional Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>