SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/adroll__RollWorks_Influenced__c.field-meta.xml
<CustomField>
    <fullName>adroll__RollWorks_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RollWorks Influenced (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>