SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/adroll__RollWorks_Influenced_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>adroll__RollWorks_Influenced_Opportunity__c</fullName>
    <formula>AND(OR(Account.adroll__Impressions__c&gt;0,Account.adroll__ImpressionCosts__c&gt;0,Account.adroll__Clicks__c&gt;0,Account.adroll__Click_Conversion__c&gt;0,Account.adroll__View_Conversion__c&gt;0),(Account.adroll__LastAdRollTrackingDate__c-DateValue(CreatedDate))&lt;=90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RollWorks Influenced (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>