SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/ADS_No_of_Events_per_Month__c.field-meta.xml
<CustomField>
    <fullName>ADS_No_of_Events_per_Month__c</fullName>
    <description>Data Export - Number of Events per Month</description>
    <inlineHelpText>Data Export - Number of Events per Month</inlineHelpText>
    <label>Data Export - No. of Events per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>