SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AdvocateHub__Referrer_Account__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referrer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>