SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AdvocateHub__Referrer_Company__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referrer_Company__c</fullName>
    <label>Referrer Company</label>
    <length>150</length>
    <type>Text</type>
</CustomField>