SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AdvocateHub__Referrer_Contact__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referrer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>