SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AdvocateHub__Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referrer_Email__c</fullName>
    <label>Referrer Email</label>
    <type>Email</type>
</CustomField>