SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AdvocateHub__Referrer_Name__c.field-meta.xml
<CustomField>
    <fullName>AdvocateHub__Referrer_Name__c</fullName>
    <label>Referrer Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>