SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AE_Expansion__c.field-meta.xml
<CustomField>
    <fullName>AE_Expansion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if this opp was created by AE efforts. ie. AE Outbound</inlineHelpText>
    <label>AE Outbound</label>
    <type>Checkbox</type>
</CustomField>