SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/AE_Manager__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>