SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Amount_MRR__c.field-meta.xml
<CustomField>
    <fullName>Amount_MRR__c</fullName>
    <description>MRR ($/mo), calculated from the Products attached to this Opportunity</description>
    <inlineHelpText>This field should update when the Product Line Items on the Opportunity are updated.</inlineHelpText>
    <label>Product MRR</label>
    <summarizedField>OpportunityLineItem.MRR__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>