SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Analytics_Data_Stream__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Data_Stream__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the use case include the Analytics Data Stream?</description>
    <inlineHelpText>Does the use case include the Analytics Data Stream?</inlineHelpText>
    <label>Analytics Data Stream</label>
    <type>Checkbox</type>
</CustomField>