SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Are_they_active_in_their_Trial__c.field-meta.xml
<CustomField>
    <fullName>Are_they_active_in_their_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMB pro plan</description>
    <label>Are they active in their Trial?</label>
    <type>Checkbox</type>
</CustomField>