SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/ARR_up_for_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ARR_up_for_Renewal__c</fullName>
    <label>ARR up for Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>