SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/ASC_606_Allocation_Needed__c.field-meta.xml
<CustomField>
    <fullName>ASC_606_Allocation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASC 606 Allocation Needed</label>
    <type>Checkbox</type>
</CustomField>