SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew__c</fullName>
    <inlineHelpText>Does this contract autorenew?</inlineHelpText>
    <label>Auto-Renew?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>