SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/B_Customer_attended_meeting__c.field-meta.xml
<CustomField>
    <fullName>B_Customer_attended_meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B. Customer attended meeting</label>
    <type>Checkbox</type>
</CustomField>