SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/BDR_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>BDR_Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Lead of the BDR&apos;s.</description>
    <label>BDR Team Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities6</relationshipName>
    <type>Lookup</type>
</CustomField>