SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Blockers__c.field-meta.xml
<CustomField>
    <fullName>Blockers__c</fullName>
    <label>Blockers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>