SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <formula>IF(CONTAINS(TEXT(StageName), &quot;won&quot;),  Incremental_ARR__c ,


IF( AND(
Contains(Text( StageName) ,&quot;Closed Won&quot;)),

Incremental_ARR__c, 0)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>