SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_decision__c.field-meta.xml
<CustomField>
    <fullName>Business_decision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who owns the Business decision?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who owns the Business decision?)</relationshipLabel>
    <relationshipName>Opportunities9</relationshipName>
    <type>Lookup</type>
</CustomField>