SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Evaluation_Date__c</fullName>
    <description>Date opp changed to business eval - Process builder</description>
    <label>Business Evaluation Date</label>
    <type>Date</type>
</CustomField>