SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_Value_Success_Story__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Success_Story__c</fullName>
    <description>Used in Business Value Strategy section of OpportunityPlan Aura component.</description>
    <inlineHelpText>What Value? What anticipated business value is important to the decision makers? What relevant customer success story should we share?</inlineHelpText>
    <label>What Value / Success Story?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>