SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_Value_Why_Change__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Why_Change__c</fullName>
    <description>Used in Business Value Strategy section of OpportunityPlan Aura component.</description>
    <inlineHelpText>What trends, pressures, business drivers, or challenges are driving this organization to do something different (ie., New tech, cost reduction, etc.)?</inlineHelpText>
    <label>Why Change?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>