SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_Value_Why_Now__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Why_Now__c</fullName>
    <description>Used in Business Value Strategy section of OpportunityPlan Aura component.</description>
    <inlineHelpText>What is the cost of delay? Is there a compelling event driving urgency? What business or organizational pain/gain is driving urgency? What about personal pain/gain?</inlineHelpText>
    <label>Why Now?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>