SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Business_Value_Why_Us__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Why_Us__c</fullName>
    <description>Used in Business Value Strategy section of OpportunityPlan Aura Component.</description>
    <inlineHelpText>Why LaunchDarkly is uniquely positioned to address the customer’s needs. Differentiation from competition?</inlineHelpText>
    <label>Why LaunchDarkly?</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>