SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Buying_Process__c.field-meta.xml
<CustomField>
    <fullName>Buying_Process__c</fullName>
    <label>What is the buying process?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>