SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/BVA_url__c.field-meta.xml
<CustomField>
    <fullName>BVA_url__c</fullName>
    <description>URL to the Business Value Assessment (BVA) for this opportunity.</description>
    <inlineHelpText>If this opportunity has a BVA, enter the URL here. This is required for all deals over $100k.</inlineHelpText>
    <label>BVA_url</label>
    <type>Url</type>
</CustomField>