SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Calc_MRR__c.field-meta.xml
<CustomField>
    <fullName>Calc_MRR__c</fullName>
    <formula>Amount /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calc MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>