SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Can_the_company_team_use_a_SaaS_product__c.field-meta.xml
<CustomField>
    <fullName>Can_the_company_team_use_a_SaaS_product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they have a pain we can solve?? (Yes / No)</description>
    <inlineHelpText>Do they have a pain we can solve?? (Yes / No)</inlineHelpText>
    <label>Can the company/team use a SaaS product</label>
    <type>Checkbox</type>
</CustomField>