SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Can_they_sign_up_for_a_pro_plan_more__c.field-meta.xml
<CustomField>
    <fullName>Can_they_sign_up_for_a_pro_plan_more__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMB Pro Plans</description>
    <label>Can they sign up for a pro plan &amp; more?</label>
    <type>Checkbox</type>
</CustomField>