SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(Must be a Contact on the Account)</description>
    <inlineHelpText>Someone who has a vested interest in your success and acts on your behalf within their organization</inlineHelpText>
    <label>Champion?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Champion)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>