SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Champion_Boss__c.field-meta.xml
<CustomField>
    <fullName>Champion_Boss__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Must be a Contact on the Account, otherwise, leave blank</description>
    <inlineHelpText>Must be a Contact on the Account, otherwise, leave blank</inlineHelpText>
    <label>Who does our champion report to? (opt.)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Who does the champion report to?)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>