SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Champion_Demo__c.field-meta.xml
<CustomField>
    <fullName>Champion_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have we given our Champion a demo</description>
    <label>Champion Demo</label>
    <type>Checkbox</type>
</CustomField>