SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Champion_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Champion_Demo_Date__c</fullName>
    <description>When did we give our Champion Demo?</description>
    <label>Champion Demo Date</label>
    <type>Date</type>
</CustomField>