SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Champion_report_to__c.field-meta.xml
<CustomField>
    <fullName>Champion_report_to__c</fullName>
    <description>Who does our champion report to? (Text Field)</description>
    <inlineHelpText>This is an optional field</inlineHelpText>
    <label>Who does our champion report to?</label>
    <length>55</length>
    <type>Text</type>
</CustomField>