SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Chorus_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Chorus_Tracker__c</fullName>
    <description>Information from your meetings with Chorus (automatically tracked)</description>
    <inlineHelpText>Information from your meetings with Chorus (automatically tracked)</inlineHelpText>
    <label>Chorus Tracker</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>