SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Client_Connections__c.field-meta.xml
<CustomField>
    <fullName>Client_Connections__c</fullName>
    <label>Client Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>