SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Client_MAU_Is_Free__c.field-meta.xml
<CustomField>
    <fullName>Client_MAU_Is_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the customer pay for mobile or get it for free?</description>
    <inlineHelpText>Did the customer pay for mobile or get it for free?</inlineHelpText>
    <label>Client MAU - Is Free</label>
    <type>Checkbox</type>
</CustomField>