SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Client_MAUs__c.field-meta.xml
<CustomField>
    <fullName>Client_MAUs__c</fullName>
    <description>Mobile and Max Streaming connections</description>
    <inlineHelpText>Mobile and Max Streaming connections</inlineHelpText>
    <label>Client MAUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>