SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Client_Pack__c.field-meta.xml
<CustomField>
    <fullName>Client_Pack__c</fullName>
    <description>Is Client Pack?</description>
    <label>Client Pack?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>