SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Closed_Under_Current_CSM__c.field-meta.xml
<CustomField>
    <fullName>Closed_Under_Current_CSM__c</fullName>
    <formula>CloseDate &gt; Account.CSM_Assigned__c</formula>
    <label>Closed Under Current CSM</label>
    <type>Checkbox</type>
</CustomField>