SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Closed_Under_Previous_CSM__c.field-meta.xml
<CustomField>
    <fullName>Closed_Under_Previous_CSM__c</fullName>
    <formula>CloseDate &lt; Account.Previous_CSM_Removed__c 
&amp;&amp;
CloseDate &gt; Account.Previous_CSM_Assigned__c</formula>
    <label>Closed Under Previous CSM</label>
    <type>Checkbox</type>
</CustomField>