SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <description>Date when this opp changed to Signature</description>
    <label>Signature Date</label>
    <type>Date</type>
</CustomField>