SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Clubhouse_URL__c.field-meta.xml
<CustomField>
    <fullName>Clubhouse_URL__c</fullName>
    <description>URL to ClubHouse ticket for Account Activation.</description>
    <label>Clubhouse URL</label>
    <type>Url</type>
</CustomField>