SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/cMAU_Amount__c.field-meta.xml
<CustomField>
    <fullName>cMAU_Amount__c</fullName>
    <inlineHelpText>Additional Client-Side Pack amount</inlineHelpText>
    <label>cMAU Amount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Name__c</field>
        <operation>startsWith</operation>
        <value>Additional Client-Side</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>