SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Commission_Type1__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type1__c</fullName>
    <formula>IF(
AND(ISPICKVAL(Expansion_Type__c ,&quot;Add-on&quot;),(CloseDate - Account.Customer_as_of__c)&lt;185),
&quot;Quick Expansion&quot;,
IF(
AND(ISPICKVAL( Expansion_Type__c,&quot;New product&quot;),(CloseDate - Account.Customer_as_of__c)&lt;185),
&quot;Quick Expansion&quot;,
IF(ISPICKVAL(Expansion_Type__c,&quot;Add-on&quot;),&quot;Expansion&quot;,
IF(ISPICKVAL(Expansion_Type__c,&quot;New product&quot;),&quot;Expansion&quot;,
TEXT( Expansion_Type__c )
))))</formula>
    <label>Check Commission Type</label>
    <type>Text</type>
</CustomField>