SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <formula>IF(
AND(ISPICKVAL(Type,&quot;Expansion Add-on&quot;),(CloseDate - Account.Customer_as_of__c)&lt;185),
&quot;Quick Expansion&quot;,
IF(
AND(ISPICKVAL(Type,&quot;Expansion&quot;),(CloseDate - Account.Customer_as_of__c)&lt;185),
&quot;Quick Expansion&quot;,
IF(ISPICKVAL(Type,&quot;Expansion Add-on&quot;),&quot;Expansion&quot;,
IF(ISPICKVAL(Type,&quot;Expansion&quot;),&quot;Expansion&quot;,
TEXT(Type)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Type</label>
    <type>Text</type>
</CustomField>