SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Commit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commit_Amount__c</fullName>
    <formula>IF(ISPICKVAL(Forecast__c, &quot;Commit&quot;),  Incremental_ARR__c , 


IF( AND(
    Contains(Text( StageName) ,&quot;Closed Won&quot;)),

    Incremental_ARR__c, 0)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>