SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>What is the compelling event?</description>
    <inlineHelpText>What is the compelling event?</inlineHelpText>
    <label>What is the compelling event?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>