SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <inlineHelpText>Why LaunchDarkly? What are we competing against?</inlineHelpText>
    <label>Competition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>