SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Competition_AB__c.field-meta.xml
<CustomField>
    <fullName>Competition_AB__c</fullName>
    <description>Who are we competing against in AB testing? (Multi-select)</description>
    <inlineHelpText>Who are we competing against in AB testing? (Multi-select)</inlineHelpText>
    <label>Competition AB?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors_AB</valueSetName>
    </valueSet>
</CustomField>