SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Competition_FF__c.field-meta.xml
<CustomField>
    <fullName>Competition_FF__c</fullName>
    <description>Who are we competing against? (Multi-select, if Other please specify)</description>
    <inlineHelpText>Who are we competing against? (Multi-select, if Other please specify)</inlineHelpText>
    <label>Competition picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitors_FF</valueSetName>
    </valueSet>
</CustomField>