SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Contact_method__c.field-meta.xml
<CustomField>
    <fullName>Contact_method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_method</valueSetName>
    </valueSet>
</CustomField>