SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Contact_notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_notes__c</fullName>
    <description>Please fill in the form any contracts, MSAs, countersigned anything that you can think of that have the following qualities
* A significant departure from our standard paper (e.g. Their paper, lots and lots of redlines, lots of addendums)
* Increases/Uncapped liability
* Increase in SLA
* Changes/Clarifications to contract exit criterion (e.g. arbitrary contract terminations, release from the contract without cause).</description>
    <inlineHelpText>Notes regarding the nature of the changes/redlines/etc.</inlineHelpText>
    <label>Contract notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>