SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Contact_Role_Created__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Role Created</label>
    <type>Checkbox</type>
</CustomField>