SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Contract_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Contract_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if there is a contract uploaded on paperflip</description>
    <label>Contract Uploaded?</label>
    <type>Checkbox</type>
</CustomField>