SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Contraction_Type__c.field-meta.xml
<CustomField>
    <fullName>Contraction_Type__c</fullName>
    <inlineHelpText>The type of contraction that occurred for this deal, if any. Should be left blank if not contraction occured.</inlineHelpText>
    <label>Contraction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned Downgrade</fullName>
            </value>
            <value>
                <fullName>Usage Contraction</fullName>
            </value>
            <value>
                <fullName>Price Contraction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>