SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/CPI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CPI_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Renewal is 3% of ARR. Uncheck if customer does not have a CPI or their CPI is different than 3%.</inlineHelpText>
    <label>CPI Enabled</label>
    <type>Checkbox</type>
</CustomField>