SFDC_LD_Packages/objects-layouts/main/default/objects/Opportunity/fields/Create_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Renewal_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Renewal Opportunity</label>
    <type>Checkbox</type>
</CustomField>